Fix style bug on mobile

--- a/src/styles/components/_input-group.scss
+++ b/src/styles/components/_input-group.scss
@@ -39,5 +39,5 @@
 }
 
 .date-container {
-    margin: 0 0 0 1rem;
+    margin: 0 1rem 0 0;
 }
